[package]
name = "tempo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bytecheck = "0.6.9"
chrono = "0.4.23"
clap = {version = "4.0.29", features = ["derive"]}
colored = "2.0.0"
inquire = "0.5.2"
num-traits = "0.2.15"
rkyv = {version = "0.7.39", features = ["validation"]}
serde = {version="1.0.148", features= ["derive"]}
serde_json = "1.0.89"
rand = "0.8.5"
paste = "1.0.9"
