[package]
name = "tempo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "1.3.3" }
bytecheck = "0.7.0"
chrono = "0.4.23"
clap = { version = "4.0.29", features = ["derive"] }
colored = "2.0.0"
inquire = { version = "0.6.2", features = ["date"] }
num-traits = "0.2.15"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
rand = "0.8.5"
paste = "1.0.9"
git2 = "0.18.1"
anyhow = "1.0.75"
reqwest = { version = "0.11.20", features = ["blocking"] }
indicatif = "0.17.7"
